# claw_wsl_infoAgent

./: .gitignore  DEPLOYMENT.md  IMPROVEMENT_REPORT.md  MVP_ASSESSMENT.md  README.md  pyproject.toml
reports/: 2026-03-08_晚报.md
scripts/: daily_report.sh  feishu_report.py  feishu_report_v2.py
src/info_gatherer/: __init__.py  __main__.py  agent.py  config.py  models.py
src/info_gatherer/collectors/: __init__.py  base.py  local_search.py  web_fetch.py  web_search.py
src/info_gatherer/processors/: __init__.py  dedup.py  rank.py  summarize.py
src/info_gatherer/utils/: __init__.py  cache.py  retry.py
tests/: test_agent.py  test_collectors.py  test_processors.py  test_utils.py
tools/windows_bridge/: README.md  windows_bridge_server.ps1  windows_bridge_server.py  wsl_bridge.sh
